# InhaAerodream-

./: ArUcoMarkerDetector.py  PX4_Avoidance.md  README.md  offboard_control.py
a8minicontrol/: LICENSE  README.md  siyi_message.py  siyi_sdk.py  stream.py
a8minicontrol/code/: gimbal_angle_control.py  test_center_gimbal.py  test_follow_mode.py  test_fpv_mode.py  test_get_fw_ver.py  test_get_gimbal_info.py  test_get_hw_id.py  test_gimbal_rotation.py  test_lock_mode.py  test_record_video.py  test_rtsp.py  test_zoom.py
a8minicontrol/siyi_tracking/object_tracker/: cam_control.py  crc16_python.py  position_reciever.py  siyi_control.py  siyi_sdk.py  tracker1.py  utils.py
docker_img/: Dockerfile  README.md
object_detecion/: README.md  package.xml  setup.py
object_detecion/launch/: my_robot.launch.py  sim.launch.py
object_detecion/object_detection/: offboard_control.py  point_cloud.py
object_detecion/urdf/: macros.xacro
object_detection/: READMD.md  package.xml  setup.py
object_detection/launch/: sim.launch.py
object_detection/object_detection/: offboard_control.py  point_cloud.py  test.py
opencv_object_tracking/: setup.cfg
precision_landing/: README.md  package.xml  setup.cfg  setup.py
precision_landing/launch/: precision_landing.launch.py
precision_landing/precision_landing/: ArUcoMarkerDetector.py  camera_calibration.py  offboard_control.py
siyi_tracking/: package.xml  setup.py
siyi_tracking/object_tracker/: cam_control.py  cam_control2.py  object_tracker.py  tracker1.py
