<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection</name>
  <version>0.1.0</version>
  <description>Test Pkg for Object Detection and Mapping</description>
  <maintainer email="alpha12334@naver.com">robot_air</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>open3d</depend>
  <depend>numpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
